unpackaged/main/default/objects/Assignment_Rule__c/Assignment_Rule__c.object-meta.xml
<CustomObject>
    <label>Assignment Rule</label>
    <nameField>
        <label>Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>