unpackaged/main/default/objects/Assignment_Rule__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB(&lt;50)</fullName>
            </value>
            <value>
                <fullName>SME(50-500)</fullName>
            </value>
            <value>
                <fullName>SME2(500-1000)</fullName>
            </value>
            <value>
                <fullName>MID-CAP(1000-5000)</fullName>
            </value>
            <value>
                <fullName>ENT(5000-10000)</fullName>
            </value>
            <value>
                <fullName>LARGE-ENT(10000+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>