unpackaged/main/default/objects/Assignment_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>